# Matrix_Multiplication

./: CMakeLists.txt  README.md  file1.txt  file2.txt  main.cpp  matrix1  matrix2  result
MatrixClass/: Matrix.hpp
src/CoreClass/: Core.cpp  Core.hpp  main.cpp
src/MatrixClass/: Matrix.cpp  Matrix.hpp
src/ThreadClass/: Thread.hpp
src/WorkerClass/: Worker.cpp  Worker.hpp
